# VSLAM-Training

./: README.md
ch10/: CMakeLists.txt  ch10.kdev4
ch10/include/: BundleParams.h  SnavelyReprojectionError.h  g2o_bal_class.h
ch10/src/: BALProblem.cpp
ch10/test/: ceres_ba.cpp  g2o_ba.cpp
ch11/: CMakeLists.txt  ch11.kdev4  pose_graph_SE3.cpp  pose_graph_gtsam.cpp  pose_graph_lie.cpp
ch12/: CMakeLists.txt  bag_training.cpp  ch12.kdev4  loop_closure.cpp
ch13/: CMakeLists.txt  ch13.kdev4  dense_mapping.cpp  octomap_mapping.cpp  pl_mapping.cpp
ch2/: CMakeLists.txt  CMakeLists.txt~  helloSlam.cpp  libHelllSlam.h  libHelloSlam.cpp  useHello.cpp
ch3/: CMakeLists.txt  ch3.kdev4  eigenMatrix.cpp  useGeometry.cpp  visualizeGeometry.cpp
ch4/: CMakeLists.txt  ch4.kdev4  useSophus.cpp
ch5/: CMakeLists.txt  ch5.kdev4  imageBasics.cpp  joinMap.cpp
ch6/: CMakeLists.txt  ch6.kdev4  g2o_op.cpp  main.cpp
ch7/: CMakeLists.txt  ch7.kdev4  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  ch8.kdev4  direct_semidense.cpp  direct_sparse.cpp  useLK.cpp
visual_odometry/first_eition/: CMakeLists.txt  first_eition.kdev4
visual_odometry/first_eition/include/myslam/: camera.h  common_include.h  config.h  frame.h  map.h  mappoint.h
visual_odometry/first_eition/src/: CMakeLists.txt  camera.cpp  frame.cpp  map.cpp  mappoint.cpp
visual_odometry/second_edition/: CMakeLists.txt  second_edition.kdev4
visual_odometry/second_edition/config/: default.yaml
visual_odometry/second_edition/include/myslam/: common_include.h  config.h  frame.h  g2o_types.h  mappoint.h  visual_odometry.h
visual_odometry/second_edition/src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
visual_odometry/second_edition/test/: CMakeLists.txt  run_vo.cpp
