project(ch5)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++11")

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(imageBasics imageBasics.cpp)
add_executable(joinMap joinMap.cpp)
target_link_libraries(imageBasics ${OpenCV_LIBS})

include_directories("/usr/include/eigen3/")
find_package(PCL REQUIRED COMPONENT common io)
include_directories(${PCL_INCLUDE_DIRS})
add_definitions(${PCL_DEFINITIONS})
target_link_libraries(joinMap ${OpenCV_LIBS} ${PCL_LIBRARIES})